@@ -1,4 +1,4 @@
-<!-- A box spinning on the ground with very high friction.  -->
+<!-- A box just sitting on the ground.  -->
 
 <XML>
   <DRIVER>
@@ -35,7 +35,7 @@
 
     <!-- Rigid bodies -->
       <!-- the box -->
-      <RigidBody name="box" id="box" enabled="true" position="0 .50001 0" angular-velocity="0 10.00 0" visualization-id="b1" linear-velocity="0 0 0">
+      <RigidBody name="box" id="box" enabled="true" position="0 .50001 0" angular-velocity="0 0.00 0" visualization-id="b1" linear-velocity="0 0 0">
         <InertiaFromPrimitive primitive-id="b1" />
         <CollisionGeometry primitive-id="b1" />
       </RigidBody>
