@@ -1,3 +1,8 @@
+r573
+----
+- Fixed tolerance bug in Optimization::qp_convex_activeset()
+- Added post-step callbacks to Simulator and EventDrivenSimulator
+
 r572
 ----
 - Fixed bug in PSDeformableBody (springs were not being created, because
